# remesh

./: .gitignore  .gitmodules  CMakeLists.txt  Glyph3D.cxx  geom.cpp  geom.hh  loop.geo  loop.msh  loopFIELD.geo  loop_test.vtk  main.cpp  remesh.cpp  remesh.h  sol.txt
example/: loop.geo  loopFIELD.geo  loopFIELDINIT.geo  loopINIT.geo  readme.md
